tests/codegen/errors/codegen/arity/atom.codegen.diagnostic.shift.arity/diagnostic-shift-arity.mon
;; TEST-ID: tests.codegen.branch.diagnostic-shift-arity
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SUBSET: arity
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-QUALITY: branch-regression
;; TEST-CODEGEN-ATOM: atom.codegen.diagnostic.shift.arity
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.runtime-codegen-corpus
;; TEST-PURPOSE: Cover bit shift arity diagnostics through REQUIRE_ARGS.
;; TEST-ATOM: >>> should require exactly two arguments.
;; TEST-EXPECT: fail:compile
;; TEST-COVERAGE: codegen.c:7703 shift operator arity diagnostic
;; TEST-COVERAGE: codegen.c:3476 REQUIRE_ARGS

;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-MENU: errors/codegen/arity/atom.codegen.diagnostic.shift.arity
;; TEST-MENU-PATH: codegen/errors/codegen/arity/atom.codegen.diagnostic.shift.arity
;; TEST-ATOM-LEAF: atom.codegen.diagnostic.shift.arity
;; TEST-CLI-TARGET: codegen errors codegen arity
(module Main)
(>>> 16)
